@@ -162,11 +162,11 @@ a '#' is ignored as a comment, unless it's in a quoted string.</p>
 <h2><a class="toc-backref" href="#id8" name="assertions">Assertions</a></h2>
 <p><strong>code</strong> <em>&lt;code&gt;</em> -- assert that the last page loaded had this HTTP status,
 e.g. <tt class="docutils literal"><span class="pre">code</span> <span class="pre">200</span></tt> asserts that the page loaded fine.</p>
-<p><strong>find</strong> <em>&lt;regexp&gt;</em> -- assert that the page contains this regular expression.</p>
+<p><strong>find</strong> <em>&lt;regexp&gt;</em> -- assert that the page contains this regular expression. The variable <tt class="docutils literal"><span class="pre">__match__</span></tt> is set to the matching string.</p>
 <p><strong>notfind</strong> <em>&lt;regexp&gt;</em> -- assert that the page <em>does not</em> contain this
 regular expression.</p>
-<p><strong>url</strong> <em>&lt;regexp&gt;</em> -- assert that the current URL matches the given regexp.</p>
-<p><strong>title</strong> <em>&lt;regexp&gt;</em> -- assert that the title of this page matches this regular expression.</p>
+<p><strong>url</strong> <em>&lt;regexp&gt;</em> -- assert that the current URL matches the given regexp.  The variable <tt class="docutils literal"><span class="pre">__match__</span></tt> is set to the matching string.</p>
+<p><strong>title</strong> <em>&lt;regexp&gt;</em> -- assert that the title of this page matches this regular expression.  The variable <tt class="docutils literal"><span class="pre">__match__</span></tt> is set to the matching string.</p>
 </div>
 <div class="section" id="display">
 <h2><a class="toc-backref" href="#id9" name="display">Display</a></h2>
@@ -562,6 +562,7 @@ functionality that can be directly applied to twill.</li>
 <li>test the documented fieldname spec for fv/submit.</li>
 <li>HTTP-EQUIV refresh/redirect commands w/in mechanize? (issola.caltech.edu/~t/transfer/redir-test.html)</li>
 <li>Test HTTP basic auth &amp; basic auth (<a class="reference" href="http://www.quixote.ca/qx/HttpBasicAuthentication">http://www.quixote.ca/qx/HttpBasicAuthentication</a>?) example.</li>
+<li>switch to using pullparser for 'title' command.</li>
 </ol>
 </blockquote>
 <p>after that:</p>
@@ -623,9 +624,9 @@ to mechanize.  Michele Simionato is an early adopter who has helped
 quite a bit.  Thanks, guys...</p>
 <p>Bug reports have come in from the following fine people: Chris Miles,
 MATSUNO Tokuhiro, Elvelind Grandin, Mike Rovner, and sureshvv.</p>
-<p>Patches have been submitted by: Joeri van Ruth, Paul McGuire, Ed Rahn,
-Nic Ferrier, Robert Leftwich, James Cameron, William Volkman, and
-Tommi Virtanen.  Thanks!</p>
+<p>Patches have been submitted by Joeri van Ruth, Paul McGuire, Ed Rahn,
+Nic Ferrier, Robert Leftwich, James Cameron, William Volkman,
+Tommi Virtanen, and Simon Buenzli.  Thanks!</p>
 <hr class="docutils" />
 <p>This document was written by C. Titus Brown, <a class="reference" href="mailto:titus&#64;caltech.edu">titus&#64;caltech.edu</a>.
 Last updated November '05.</p>
