@@ -685,9 +685,9 @@ quite a bit.  Thanks, guys...
 Bug reports have come in from the following fine people: Chris Miles,
 MATSUNO Tokuhiro, Elvelind Grandin, Mike Rovner, and sureshvv.
 
-Patches have been submitted by: Joeri van Ruth, Paul McGuire, Ed Rahn,
-Nic Ferrier, Robert Leftwich, James Cameron, William Volkman, and
-Tommi Virtanen.  Thanks!
+Patches have been submitted by Joeri van Ruth, Paul McGuire, Ed Rahn,
+Nic Ferrier, Robert Leftwich, James Cameron, William Volkman,
+Tommi Virtanen, and Simon Buenzli.  Thanks!
 
 ---------
 
