@@ -1,3 +1,10 @@
+2005-11-27  Titus Brown  <t@issola.caltech.edu>
+
+	* Moved the journey-exception-wrapping into the mechanize mech_open
+	  function; this fixes a bug reported by sureshvv.  Augmented
+	  test-back.twill to test this, and added a 'plaintext' function
+	  to the twill test server.
+
 2005-11-20  Titus Brown  <t@issola.caltech.edu>
 
 	* Switched to using pullparser to extract title in utils.
